-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
Attached Test.java triggers failures in the matcher and GCM:
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/oracle/valhalla2/open/src/hotspot/share/opto/matcher.cpp:1868), pid=593275, tid=593294
# assert(m->adr_type() == mach_at) failed: matcher should not change adr type
Current CompileTask:
C2: 19732 26 b 4 Test::test1 (21 bytes)
Stack: [0x00007fd74064d000,0x00007fd74074e000], sp=0x00007fd740748c10, free space=1007k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x15279e3] Matcher::ReduceInst(State*, int, Node*&)+0x383
V [libjvm.so+0x15303ed] Matcher::match_tree(Node const*)+0x57d
V [libjvm.so+0x153f63f] Matcher::xform(Node*, int)+0xf6f
V [libjvm.so+0x1547058] Matcher::match()+0x4658
V [libjvm.so+0xac47cc] Compile::Code_Gen()+0x9c
V [libjvm.so+0xad101e] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x174e
V [libjvm.so+0x8c4176] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x6b6
V [libjvm.so+0xae1188] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc88
V [libjvm.so+0xae1f28] CompileBroker::compiler_thread_loop()+0x648
V [libjvm.so+0x19f6a0a] JavaThread::thread_main_inner()+0x25a
V [libjvm.so+0x19fedd0] Thread::call_run()+0x100
V [libjvm.so+0x16b6064] thread_native_entry(Thread*)+0x104
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/oracle/valhalla2/open/src/hotspot/share/opto/gcm.cpp:793), pid=595520, tid=595555
# assert(store != load->find_exact_control(load->in(0))) failed: dependence cycle found
Current CompileTask:
C2: 20778 26 b 4 Test::test2 (11 bytes)
Stack: [0x00007f3ede1c4000,0x00007f3ede2c5000], sp=0x00007f3ede2bf6a0, free space=1005k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xe08fea] PhaseCFG::insert_anti_dependences(Block*, Node*, bool)+0x212a
V [libjvm.so+0xe0f60b] PhaseCFG::schedule_late(VectorSet&, Node_Stack&)+0xc7b
V [libjvm.so+0xe0fe45] PhaseCFG::global_code_motion()+0x325
V [libjvm.so+0xe14061] PhaseCFG::do_global_code_motion()+0x51
V [libjvm.so+0xac49c3] Compile::Code_Gen()+0x293
V [libjvm.so+0xad101e] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x174e
V [libjvm.so+0x8c4176] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x6b6
V [libjvm.so+0xae1188] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc88
V [libjvm.so+0xae1f28] CompileBroker::compiler_thread_loop()+0x648
V [libjvm.so+0x19f6a0a] JavaThread::thread_main_inner()+0x25a
V [libjvm.so+0x19fedd0] Thread::call_run()+0x100
V [libjvm.so+0x16b6064] thread_native_entry(Thread*)+0x104
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/oracle/valhalla2/open/src/hotspot/share/opto/matcher.cpp:1868), pid=593275, tid=593294
# assert(m->adr_type() == mach_at) failed: matcher should not change adr type
Current CompileTask:
C2: 19732 26 b 4 Test::test1 (21 bytes)
Stack: [0x00007fd74064d000,0x00007fd74074e000], sp=0x00007fd740748c10, free space=1007k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x15279e3] Matcher::ReduceInst(State*, int, Node*&)+0x383
V [libjvm.so+0x15303ed] Matcher::match_tree(Node const*)+0x57d
V [libjvm.so+0x153f63f] Matcher::xform(Node*, int)+0xf6f
V [libjvm.so+0x1547058] Matcher::match()+0x4658
V [libjvm.so+0xac47cc] Compile::Code_Gen()+0x9c
V [libjvm.so+0xad101e] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x174e
V [libjvm.so+0x8c4176] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x6b6
V [libjvm.so+0xae1188] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc88
V [libjvm.so+0xae1f28] CompileBroker::compiler_thread_loop()+0x648
V [libjvm.so+0x19f6a0a] JavaThread::thread_main_inner()+0x25a
V [libjvm.so+0x19fedd0] Thread::call_run()+0x100
V [libjvm.so+0x16b6064] thread_native_entry(Thread*)+0x104
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/oracle/valhalla2/open/src/hotspot/share/opto/gcm.cpp:793), pid=595520, tid=595555
# assert(store != load->find_exact_control(load->in(0))) failed: dependence cycle found
Current CompileTask:
C2: 20778 26 b 4 Test::test2 (11 bytes)
Stack: [0x00007f3ede1c4000,0x00007f3ede2c5000], sp=0x00007f3ede2bf6a0, free space=1005k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xe08fea] PhaseCFG::insert_anti_dependences(Block*, Node*, bool)+0x212a
V [libjvm.so+0xe0f60b] PhaseCFG::schedule_late(VectorSet&, Node_Stack&)+0xc7b
V [libjvm.so+0xe0fe45] PhaseCFG::global_code_motion()+0x325
V [libjvm.so+0xe14061] PhaseCFG::do_global_code_motion()+0x51
V [libjvm.so+0xac49c3] Compile::Code_Gen()+0x293
V [libjvm.so+0xad101e] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x174e
V [libjvm.so+0x8c4176] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x6b6
V [libjvm.so+0xae1188] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc88
V [libjvm.so+0xae1f28] CompileBroker::compiler_thread_loop()+0x648
V [libjvm.so+0x19f6a0a] JavaThread::thread_main_inner()+0x25a
V [libjvm.so+0x19fedd0] Thread::call_run()+0x100
V [libjvm.so+0x16b6064] thread_native_entry(Thread*)+0x104
- relates to
-
JDK-8252506 [lworld] Multiple issues with C2's arraycopy intrinsic
-
- Resolved
-