8280707: [lworld] More issues with C2's arraycopy intrinsic